force-app/main/default/objects/Funding_Self_Evaluation__c/fields/People_Trained_Retrofit_Proj_Mgmt__c.field-meta.xml
<CustomField>
    <fullName>People_Trained_Retrofit_Proj_Mgmt__c</fullName>
    <defaultValue>0</defaultValue>
    <description>No of Staff that attended Retrofit project management training courses during Wave 3?</description>
    <inlineHelpText>No of Staff that attended Retrofit project management training courses during Wave 3?</inlineHelpText>
    <label>People Trained - Retrofit Proj Mgmt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>