force-app/main/default/objects/Funding_Self_Evaluation__c/fields/Percent_of_FTE_Posts__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_FTE_Posts__c</fullName>
    <formula>( (FTE_Post_No_Admin_Sales_Cust_Serv_Ops__c* FTE_Post_Admin_Sales_Cust_Serv_Ops__c ) /Total_FTE_Posts_Summed_Occupation__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% of FTE Posts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>