force-app/main/default/objects/Funding_Self_Evaluation__c/fields/Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Project_Id__c</fullName>
    <formula>Funding_Award__r.Project_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Id</label>
    <type>Text</type>
</CustomField>