force-app/main/default/objects/Funding_Self_Evaluation__c/fields/Resources_or_Products_Shared__c.field-meta.xml
<CustomField>
    <fullName>Resources_or_Products_Shared__c</fullName>
    <defaultValue>&quot;Enter Text&quot;</defaultValue>
    <description>Have you shared any resources or products with less experienced social housing providers, to support them to develop their retrofit capabilities during Wave 3? If yes, please provide details of the resources shared, and the number of organisations shared with. This could include consortium members.</description>
    <inlineHelpText>Have you shared any resources or products with less experienced social housing providers, to support them to develop their retrofit capabilities during Wave 3? If yes, please provide details of the resources shared, and the number of organisations shared with. This could include consortium members.</inlineHelpText>
    <label>Resources or Products Shared</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>