force-app/main/default/objects/Funding_Self_Evaluation__c/fields/Retrofit_Management_Retrofit_Assessor__c.field-meta.xml
<CustomField>
    <fullName>Retrofit_Management_Retrofit_Assessor__c</fullName>
    <description>Indicates the primary delivery model/structure the organisation adopts for the retrofit management - retrofit assessor role from the drop-down list.</description>
    <inlineHelpText>Indicates the primary delivery model/structure the organisation adopts for the retrofit management - retrofit assessor role from the drop-down list.</inlineHelpText>
    <label>Retrofit Management - Retrofit Assessor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivered internally</fullName>
            </value>
            <value>
                <fullName>Directly contracted</fullName>
            </value>
            <value>
                <fullName>Subcontracted</fullName>
            </value>
            <value>
                <fullName>Not used on this project</fullName>
            </value>
            <value>
                <fullName>My consortium lead / consortium partner manages this role</fullName>
                <label>My consortium partner manages this role</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Don&apos;t know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>