force-app/main/default/objects/Funding_Self_Evaluation__c/fields/Revision_Further_Information_Requested__c.field-meta.xml
<CustomField>
    <fullName>Revision_Further_Information_Requested__c</fullName>
    <description>Long text field for internal DESNZ users to request further information or revisions from GR.</description>
    <label>Revision/Further Information Requested</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>