force-app/main/default/objects/Funding_Self_Evaluation__c/fields/Shared_Resources_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Shared_Resources_Picklist__c</fullName>
    <description>11. Have you shared any resources or products with less experienced social housing providers, to support them to develop their retrofit capabilities during Wave 3?</description>
    <inlineHelpText>11. Have you shared any resources or products with less experienced social housing providers, to support them to develop their retrofit capabilities during Wave 3?</inlineHelpText>
    <label>Shared Resources Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Don&apos;t Know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>