force-app/main/default/objects/Funding_Self_Evaluation__c/fields/Shared_Resources_With_Less_Exp_Housing__c.field-meta.xml
<CustomField>
    <fullName>Shared_Resources_With_Less_Exp_Housing__c</fullName>
    <defaultValue>&quot;Enter Text&quot;</defaultValue>
    <description>Have you shared any resources or products with less experienced social housing providers, to support them to develop their retrofit capabilities during Wave 3?</description>
    <inlineHelpText>Have you shared any resources or products with less experienced social housing providers, to support them to develop their retrofit capabilities during Wave 3?</inlineHelpText>
    <label>Shared Resources With Less Exp Housing</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>