force-app/main/default/objects/Funding_Self_Evaluation__c/fields/Total_Apprentices__c.field-meta.xml
<CustomField>
    <fullName>Total_Apprentices__c</fullName>
    <description>Total number of apprentices employed</description>
    <formula>Apprentices_Constr_Installation_Ops__c  +  Apprentices_Site_Management__c  +  Apprentices_Eng_Design_Assmts__c  +  Apprentices_Other_eg_Proj_Mgmt_Admin__c  +  Apprentices_Don_t_know__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total number of apprentices employed</inlineHelpText>
    <label>Total Apprentices</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>