force-app/main/default/objects/Funding_Self_Evaluation__c/fields/Total_FTE_Posts__c.field-meta.xml
<CustomField>
    <fullName>Total_FTE_Posts__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total FTE Posts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>