force-app/main/default/objects/Funding_Self_Evaluation__c/fields/Total_FTE_Posts_involved_in_Wave_3__c.field-meta.xml
<CustomField>
    <fullName>Total_FTE_Posts_involved_in_Wave_3__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total FTE Posts % involved in Wave 3</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>