force-app/main/default/objects/Funding_Self_Evaluation__c/fields/Total_FTE_Posts_Summed_Occupation__c.field-meta.xml
<CustomField>
    <fullName>Total_FTE_Posts_Summed_Occupation__c</fullName>
    <description>Total number of FTE posts</description>
    <formula>FTE_Post_No_Mgrs_Dirs_Sr_Officials__c  +  
FTE_Post_No_Bus_Pub_Eng_Tech_Prof__c  +  
FTE_Post_No_Assoc_Prof_Bus_Eng_Etc__c +  
FTE_Post_No_Admin_Sales_Cust_Serv_Ops__c +  
FTE_Post_No_Skilled_Trades_Occs__c +  
FTE_Post_No_Other_Role_Categories__c + 
FTE_Post_No_Role_Unknown__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total number of FTE posts</inlineHelpText>
    <label>Total FTE Posts - Summed Occupation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>