force-app/main/default/objects/Funding_Self_Evaluation__c/fields/Total_Number_of_Accreditations__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Accreditations__c</fullName>
    <formula>XAccreditations_Fitting_Air_Ground_HP__c  +  
XAccreditations_Fitting_Insulation__c  +  
XAccreditations_Fitting_Other_Retrofit__c  +  
XAccreditations_Fitting_Solar_PV_Therma__c  +  
XAccreditations_Another_Related_Accred__c  +  
XAccreditations_PAS_2035_Trustmark__c  +  
XAccreditations_Retrofit_Assess_Design__c  +  
XAccreditations_Retrofit_Project_Mgmt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Number of Accreditations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>