force-app/main/default/objects/Funding_Self_Evaluation__c/fields/Total_Number_of_People_Trained__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_People_Trained__c</fullName>
    <formula>People_Trained_Another_Related_Accred__c  +  People_Trained_Fitting_Air_Ground_HP__c  +  No_People_Fitting_Other_Retrofit__c  +  No_People_Fitting_Other_Retrofit__c  +  No_People_Fitting_Solar_PV_Thermal__c  +   No_People_PAS_2035_Trustmark__c  +  People_Trained_Retrofit_Proj_Mgmt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Number of People Trained</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>