force-app/main/default/objects/Funding_Self_Evaluation__c/fields/Total_number_of_Training_Courses__c.field-meta.xml
<CustomField>
    <fullName>Total_number_of_Training_Courses__c</fullName>
    <formula>XTraining_Another_Related_Accred__c  +  XTraining_Fitting_Air_Ground_HP__c  +  XTraining_Fitting_Insulation__c  +  XTraining_Fitting_Other_Retrofit__c  +  XTraining_Fitting_Solar_PV_Thermal__c  +  XTraining_PAS_2035_Trustmark__c  +  XTraining_Retrofit_Assess_Design__c  +  XTraining_Retrofit_Proj_Mgmt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total number of Training Courses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>