force-app/main/default/objects/Funding_Self_Evaluation__c/fields/XAccreditations_Another_Related_Accred__c.field-meta.xml
<CustomField>
    <fullName>XAccreditations_Another_Related_Accred__c</fullName>
    <defaultValue>0</defaultValue>
    <description>No. of accreditations received - Another retrofit related accreditation</description>
    <inlineHelpText>No. of accreditations received - Another retrofit related accreditation</inlineHelpText>
    <label>XAccreditations - Another Related Accred</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>