force-app/main/default/objects/Funding_Self_Evaluation__c/fields/XAccreditations_Fitting_Insulation__c.field-meta.xml
<CustomField>
    <fullName>XAccreditations_Fitting_Insulation__c</fullName>
    <defaultValue>0</defaultValue>
    <description>No. of accreditations received - Fitting insulation (e.g. EWI, IWI)</description>
    <inlineHelpText>No. of accreditations received - Fitting insulation (e.g. EWI, IWI)</inlineHelpText>
    <label>XAccreditations - Fitting Insulation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>