force-app/main/default/objects/Funding_Self_Evaluation__c/fields/XAccreditations_Fitting_Other_Retrofit__c.field-meta.xml
<CustomField>
    <fullName>XAccreditations_Fitting_Other_Retrofit__c</fullName>
    <defaultValue>0</defaultValue>
    <description>No. of accreditations received - Fitting another retrofit product (e.g. double or triple glazing)</description>
    <inlineHelpText>No. of accreditations received - Fitting another retrofit product (e.g. double or triple glazing)</inlineHelpText>
    <label>XAccreditations - Fitting Other Retrofit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>