force-app/main/default/objects/Funding_Self_Evaluation__c/fields/XAccreditations_Fitting_Solar_PV_Therma__c.field-meta.xml
<CustomField>
    <fullName>XAccreditations_Fitting_Solar_PV_Therma__c</fullName>
    <defaultValue>0</defaultValue>
    <description>No. of accreditations received - Fitting Solar PV or Solar Thermal</description>
    <inlineHelpText>No. of accreditations received - Fitting Solar PV or Solar Thermal</inlineHelpText>
    <label>XAccreditations - Fitting Solar PV/Therm</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>