force-app/main/default/objects/Funding_Self_Evaluation__c/fields/XAccreditations_PAS_2035_Trustmark__c.field-meta.xml
<CustomField>
    <fullName>XAccreditations_PAS_2035_Trustmark__c</fullName>
    <defaultValue>0</defaultValue>
    <description>No. of accreditations received - PAS 2035 / Trustmark</description>
    <inlineHelpText>No. of accreditations received - PAS 2035 / Trustmark</inlineHelpText>
    <label>XAccreditations - PAS 2035 / Trustmark</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>