force-app/main/default/objects/Funding_Self_Evaluation__c/fields/XAccreditations_Retrofit_Assess_Design__c.field-meta.xml
<CustomField>
    <fullName>XAccreditations_Retrofit_Assess_Design__c</fullName>
    <defaultValue>0</defaultValue>
    <description>No. of accreditations - Retrofit assessment or design</description>
    <inlineHelpText>No. of accreditations - Retrofit assessment or design</inlineHelpText>
    <label>XAccreditations - Retrofit Assess/Design</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>