force-app/main/default/objects/Funding_Self_Evaluation__c/fields/XAccreditations_Retrofit_Project_Mgmt__c.field-meta.xml
<CustomField>
    <fullName>XAccreditations_Retrofit_Project_Mgmt__c</fullName>
    <defaultValue>0</defaultValue>
    <description>No. of accreditations received - Retrofit project management</description>
    <inlineHelpText>No. of accreditations received - Retrofit project management</inlineHelpText>
    <label>XAccreditations - Retrofit Project Mgmt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>