force-app/main/default/objects/Funding_Self_Evaluation__c/fields/XKnowledge_Sharing_Forums__c.field-meta.xml
<CustomField>
    <fullName>XKnowledge_Sharing_Forums__c</fullName>
    <defaultValue>&quot;Enter Text&quot;</defaultValue>
    <description>How many (if any) retrofit-related knowledge sharing forums has the Wave 3 project team organised or taken part in during Wave 3? These could include conferences, networks, seminars/webinars etc.</description>
    <inlineHelpText>How many (if any) retrofit-related knowledge sharing forums has the Wave 3 project team organised or taken part in during Wave 3? These could include conferences, networks, seminars/webinars etc.</inlineHelpText>
    <label>XKnowledge Sharing Forums</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>