force-app/main/default/objects/Funding_Self_Evaluation__c/fields/XNo_of_Knowledge_Sharing_Forums__c.field-meta.xml
<CustomField>
    <fullName>XNo_of_Knowledge_Sharing_Forums__c</fullName>
    <defaultValue>0</defaultValue>
    <description>How many (if any) retrofit-related knowledge sharing forums has the Wave 3 project team organised or taken part in during Wave 3?</description>
    <inlineHelpText>How many (if any) retrofit-related knowledge sharing forums has the Wave 3 project team organised or taken part in during Wave 3?</inlineHelpText>
    <label>XNo.of Knowledge Sharing Forums</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>