force-app/main/default/objects/Funding_Self_Evaluation__c/fields/XSME_Contractors_Used__c.field-meta.xml
<CustomField>
    <fullName>XSME_Contractors_Used__c</fullName>
    <defaultValue>&quot;Enter Text&quot;</defaultValue>
    <description>How many (if any) SME contractors have you used on your Wave 3 project? Please use your best approximation, and provide any further relevant details. Please do not include their subcontractors.</description>
    <inlineHelpText>How many (if any) SME contractors have you used on your Wave 3 project? Please use your best approximation, and provide any further relevant details. Please do not include their subcontractors.</inlineHelpText>
    <label>XSME Contractors Used</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>