force-app/main/default/objects/Funding_Self_Evaluation__c/fields/XSME_Subcontractors__c.field-meta.xml
<CustomField>
    <fullName>XSME_Subcontractors__c</fullName>
    <defaultValue>&quot;Enter Text&quot;</defaultValue>
    <description>How many (if any) SME subcontractors are working on your Wave 3 project? Please use your best approximation, and provide any further relevant details. If you don&apos;t know, please state so in the free text box.</description>
    <inlineHelpText>How many (if any) SME subcontractors are working on your Wave 3 project? Please use your best approximation, and provide any further relevant details. If you don&apos;t know, please state so in the free text box.</inlineHelpText>
    <label>XSME Subcontractors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>