force-app/main/default/objects/Funding_Self_Evaluation__c/fields/XSupport_To_Receive_Retrofit_Accred__c.field-meta.xml
<CustomField>
    <fullName>XSupport_To_Receive_Retrofit_Accred__c</fullName>
    <description>How many (if any) organisations have you supported to receive relevant retrofit accreditations during Wave 3?</description>
    <inlineHelpText>How many (if any) organisations have you supported to receive relevant retrofit accreditations during Wave 3?</inlineHelpText>
    <label>XSupport To Receive Retrofit Accred</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>