force-app/main/default/objects/Funding_Self_Evaluation__c/fields/XTraining_Another_Related_Accred__c.field-meta.xml
<CustomField>
    <fullName>XTraining_Another_Related_Accred__c</fullName>
    <defaultValue>0</defaultValue>
    <description>How many Another retrofit related accreditation training courses were attended by staff during Wave 3?</description>
    <inlineHelpText>How many Another retrofit related accreditation training courses were attended by staff during Wave 3?</inlineHelpText>
    <label>XTraining - Another Related Accred</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>