force-app/main/default/objects/Funding_Self_Evaluation__c/fields/XTraining_Fitting_Air_Ground_HP__c.field-meta.xml
<CustomField>
    <fullName>XTraining_Fitting_Air_Ground_HP__c</fullName>
    <defaultValue>0</defaultValue>
    <description>How many Fitting Air Source or Ground Source Heat Pumps training courses were attended by staff during Wave 3?</description>
    <inlineHelpText>How many Fitting Air Source or Ground Source Heat Pumps training courses were attended by staff during Wave 3?</inlineHelpText>
    <label>XTraining - Fitting Air/Ground HP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>