force-app/main/default/objects/Funding_Self_Evaluation__c/fields/XTraining_Fitting_Insulation__c.field-meta.xml
<CustomField>
    <fullName>XTraining_Fitting_Insulation__c</fullName>
    <defaultValue>0</defaultValue>
    <description>How many Fitting insulation (e.g. EWI, IWI) training courses were attended by staff during Wave 3?</description>
    <inlineHelpText>How many Fitting insulation (e.g. EWI, IWI) training courses were attended by staff during Wave 3?</inlineHelpText>
    <label>XTraining - Fitting Insulation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>