force-app/main/default/objects/Funding_Self_Evaluation__c/fields/XTraining_Fitting_Other_Retrofit__c.field-meta.xml
<CustomField>
    <fullName>XTraining_Fitting_Other_Retrofit__c</fullName>
    <defaultValue>0</defaultValue>
    <description>How many  Fitting another retrofit product (e.g. double or triple glazing) training courses were attended by staff during Wave 3?</description>
    <inlineHelpText>How many  Fitting another retrofit product (e.g. double or triple glazing) training courses were attended by staff during Wave 3?</inlineHelpText>
    <label>XTraining - Fitting Other Retrofit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>