force-app/main/default/objects/Funding_Self_Evaluation__c/fields/XTraining_Fitting_Solar_PV_Thermal__c.field-meta.xml
<CustomField>
    <fullName>XTraining_Fitting_Solar_PV_Thermal__c</fullName>
    <defaultValue>0</defaultValue>
    <description>How many Fitting Solar PV or Solar Thermal training courses were attended by staff during Wave 3?</description>
    <inlineHelpText>How many Fitting Solar PV or Solar Thermal training courses were attended by staff during Wave 3?</inlineHelpText>
    <label>XTraining - Fitting Solar PV/Thermal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>