force-app/main/default/objects/Funding_Self_Evaluation__c/fields/XTraining_PAS_2035_Trustmark__c.field-meta.xml
<CustomField>
    <fullName>XTraining_PAS_2035_Trustmark__c</fullName>
    <defaultValue>0</defaultValue>
    <description>How many PAS 2035 / Trustmark training courses were attended by staff during Wave 3?</description>
    <inlineHelpText>How many PAS 2035 / Trustmark training courses were attended by staff during Wave 3?</inlineHelpText>
    <label>XTraining - PAS 2035/Trustmark</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>